
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Rnreleased]

### Added

- Novas badges de votos adicionadas! Agora existem badges de votos para: 50, 100, 200, 300, 400, 500 e 1000 votos!

### Changed

- Todos os perfis foram alterados para mostrarem o título do usuário
- O comando `/perfil` ficou mais rápido para os temas que não mostram o uso de comandos!
- Os comandos `/8ball`, `/filosofia`, `/macetava` e `/astlolfo` ficaram bem mais rápidos!
- O texto que aparece no perfil de quando alguém não tem dados de comandos foi alterado
- O comando `/personalizar badges` está mostrando informações mais úteis.

## [5.10.0] - 2023-11-01

### Added

- **Sistema de Fazendinha.** O sistema de fazendinha finalmente chegou na Menhera! Plante suas sementes e venda as plantações para ganhar estrelinhas! Cuidado para não deixar as plantas aprodrecerem!
- _Novo comando_ `/fazendinha plantações`: Controle os campos de sua fazenda. Plante e colha suas plantações.
- _Novo comando_ `/fazendinha silo`: Veja o silo de sua fazenda, com informações como quantas sementes e plantas tu tem.
- _Novo comando_ `/estatísticas fazendeiro`: Veja as estatísticas das plantações de usuários.
- _Novo comando_ `/estatísticas poker`: Veja as estatísticas de partidas de Poker de usuários.
- _Novo comando_ `/top estatísticas impostos`: Veja os usuários que mais pagaram impostos para a Menhera.
- _Novo comando_ `/menhera atualizações`: Veja informações da última atualização da Menhera.
- _Novo comando_ `/loja comprar sementes`: Compre diferentes sementes para plantar em sua fazenda.
- _Novo comando_ `/loja vender plantas`: Venda suas plantações para ganhar estrelinhas.
- _Novas opções_ `/loja preços comprar` e `/loja preços vender`. Veja os preços de compra e venda de plantas e sementes.